# sphinx-fortran-domain

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: conf.py  index.rst
docs/_static/: custom.css
docs/_static/images/: logo-license.txt
docs/api/: directives.rst  domain.rst  index.rst  lexers.rst  utils.rst
docs/examples/: example_01.rst  example_03.rst  example_05.rst  index.rst
example/: example_01.f90  example_02.f90  example_03.f90  example_04_child_submodule.f90  example_04_parent_module.f90  example_05.f90
src/sphinx_fortran_domain/: __init__.py  directives.py  domain.py  utils.py
src/sphinx_fortran_domain/lexers/: __init__.py  lexer_ford.py  lexer_fparser2.py  lexer_lfortran.py  lexer_regex.py
tests/: test_doc_markers.py  test_docstring_format.py  test_ford_lexer_optional.py  test_reference_plugin_integration.py  test_regex_lexer.py  test_sources_exclude.py  test_version.py
tests/fixtures/: reference_plugin.py
