[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sphinx-fortran-domain"
dynamic = ["version"]
description = "A modern Sphinx domain for Fortran"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
	"Sphinx>=6",
]

[project.optional-dependencies]
docs = [
	"myst-parser",
	"pydata-sphinx-theme",
]
test = [
	"pytest>=7",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.pytest.ini_options]
testpaths = ["tests"]
